--- a/index.html
+++ b/index.html
@@ -5,37 +5,35 @@
     </head>
     <body>
         <div id="app">
-            {{datas}}
-            <child-comp></child-comp>
+            <h1>Vue Route Example</h1>
+            <p>
+                <router-link to="/main">main</router-link>
+                <router-link to="/login">login</router-link>
+            </p>
+            <router-view></router-view>
         </div>
         <!-- 개발버전, 도움되는 콘솔 경고를 포함. -->
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/vue-router@3.0.1/dist/vue-router.js"></script>
         <script>
             var eventBus = new Vue();
             var number = 0;
 
-            Vue.component('child-comp', {
-                template : '<div>하위 컴포넌트 영역 입니다. <button @click="showLog">buttons</button></div>',
-                methods : {
-                    showLog :  function () {
-                        eventBus.$emit('triggerEventBus', 100)
-                    }
-                }
+            var main = {template: '<div style="text-align:center">메인</div>'};
+            var login = {template: '<div style="text-align:center">로그인</div>'};
+
+            var routes = [
+                { path: '/main', component: main},
+                { path: '/login', component: login}
+            ];
+            
+            var router = new VueRouter({
+                routes
             });
 
             var app = new Vue({
-                el: '#app',
-                data : {
-                    datas : number
-                },
-                created : function () {
-                    eventBus.$on('triggerEventBus', function(value){
-                        console.log(value);
-                        number += value
-                        console.log(number);
-                    });
-                }
-            });
+                router
+            }).$mount('#app');
         </script>
     </body>
 </html>
