nested route example

--- a/index.html
+++ b/index.html
@@ -6,25 +6,39 @@
     <body>
         <div id="app">
             <h1>Vue Route Example</h1>
-            <p>
-                <router-link to="/main">main</router-link>
-                <router-link to="/login">login</router-link>
-            </p>
             <router-view></router-view>
         </div>
         <!-- 개발버전, 도움되는 콘솔 경고를 포함. -->
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/vue-router@3.0.1/dist/vue-router.js"></script>
         <script>
-            var eventBus = new Vue();
-            var number = 0;
+            var User = {
+                template: `
+                    <div>
+                        User Component
+                        <router-view></router-view>
+                    </div>
+                `
+            };
 
-            var main = {template: '<div style="text-align:center">메인</div>'};
-            var login = {template: '<div style="text-align:center">로그인</div>'};
+            var UserProfile = {template: '<p>user profile</p>'};
+            var UserPost = {template: '<p>user post</p>'};
 
             var routes = [
-                { path: '/main', component: main},
-                { path: '/login', component: login}
+                {
+                    path: '/user',
+                    component: User,
+                    children: [
+                        {
+                        path: '/post',
+                        component: UserPost
+                        },
+                        {
+                            path: '/profile',
+                            component: UserProfile
+                        }
+                    ]
+                }
             ];
             
             var router = new VueRouter({
